--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div id="year_range">
     Browse by year:<br>
-    0<input type="range" min="0" max="61" step="1">61
+    0<input type="range" min="0" max="61" step="1" value="61">61
   </div>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="visualize.js"></script>
